--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -77,9 +77,18 @@ The following are the other improvements performed to solve the enhancement issu
 
 This section lists the fixed issues for Hazelcast 3.7 and 3.7.x releases.
 
-*3.7-RC Fixes*
+*3.7.1 Fixes*
 
-The following are the issues solved for 3.7-RC (Release Candidate) release.
+- Aggressive SQL predicate flattening may result in wrong parsing of SQL. [8799]
+- To properly configure within Spring context, incorrect client defaults should be fixed. [8761]
+- NullPointerException is thrown when the class DefaultNodeExtension has been loaded by two different class loaders. [8755]
+- HazelcastInstanceNotActive exception is thrown which is misleading. When a remote member is shutdown while destroying a proxy, no warnings should be logged. [8736]
+- Test failure fixes: [8702], [8694], [8460], [7022]
+
+
+*3.7 Fixes*
+
+The following are the issues solved for 3.7 release.
 
 - `MapAttributeConfig` cannot be loaded in an OSGi environment. [8482]
 - Using Hazelcast out of the box with no configuration creates a Peer-to-Peer cluster. As soon as the configuration file `hazelcast.xml` is created by the user, in which only the logging type is set, Hazelcast does not create a cluster but starts in standalone mode. [8481]
@@ -89,10 +98,6 @@ The following are the issues solved for 3.7-RC (Release Candidate) release.
 - There is an error when configuring Replicated Map. The return of the method `getConfig` in `ReplicatedMapMBean` should be fixed. [8298]
 - TransactionalMap's `removeIfSame` test fails. [8238]
 - Distributed Executor Service does not take `ExecutorConfig.isStatisticsEnabled` into account. [8223]
-
-*3.7-EA Fixes*
-
-The following are the issues solved for 3.7-EA (Early Access) release.
 
 - The method ICache::destroy should remove the cache itself from the owner CacheManager because, otherwise, it causes memory leaks due to the cache proxies which are dead but deemed as working, in AbstractHazelcastCacheManager::caches. [8186]
 
