--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -6,7 +6,7 @@ to the full descriptions of the issues at https://github.com/hazelcast/hazelcast
 1. New Features
 
 - Rolling Member Upgrades for Minor Releases: You can upgrade your Hazelcast members to the next minor release without service interruption. Please refer to the Rolling Member Upgrades chapter.
-- Copy Hot Restart Data to a Different Cluster: Hot Restart's base directory can be copied or moved to a different server and you can restart your Hazelcast member using the existing Hot Restart data on that new server. Please refer to the Moving/Copying Hot Restart Data section.
+- Restore Hot Restart Data in a Different Cluster: You will be able to restore Hot Restart data on a completely new cluster with different IP addresses or on a cluster of machines formed by existing and new IP addresses. Since this is a removal of a restriction or limitation, nothing will change for current Hot Restart Store users. Please refer to the Moving/Copying Hot Restart Data section.
 - HyperLogLog: HyperLogLog data structure is implemented on top of Hazelcast to estimate cardinality.
 - Scheduled Executor Service: Distributed implementation of Java's ScheduledExecutorService API.
 - Zero Deployment: Hazelcast, now, accesses and uses the user classes without having them on the classpath.
@@ -19,6 +19,7 @@ This section lists the enhancements performed for Hazelcast 3.8 release.
 - Entry Cost Statistics for High-Density Memory Store: If you are using High-Density Memory, you can see the entry cost statistics in the Management Center.
 - Hot Restart Usability Improvements: When a cluster with Hot Restart enabled is restarted, it starts in the ACTIVE state. Please refer to the Hot Restart Types section.
 - Hot Restart with Incomplete Members: The restart procedure for a cluster having Hot Restart enabled is now more flexible by allowing you to do a partial start, which basically means that once the cluster is shutdown, it can be restarted with some missing members. Please refer to the Partial Start section.
+- Copy Hot Restart Store data from Source to Target: You can copy Hot Restart Store data from a running cluster to a target without shutting down the source cluster. Please refer to the Hot Backup section.
 - Cluster Quorum for Queue and Lock: Cluster quorum is now available for the queue and lock data structures. Please refer to the Split-Brain Protection section.
 - Eventually Consistent Near Cache: With this improvement, possible losses of invalidation events are detected and stale reads are prevented.
 - High Performance Near Cache: A near cache pre-loader is introduced to preserve the information about which keys are used in a populated near cache.
